force-app/main/default/objects/udhayasow_Book_c__x/udhayasow_Book_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>Udhaya_Salesforce_org</externalDataSource>
    <externalName>udhayasow__Book__c</externalName>
    <label>Book</label>
    <pluralLabel>Books</pluralLabel>
</CustomObject>