force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_Additional_Author_c__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_Additional_Author_c__c</fullName>
    <externalDeveloperName>udhayasow__Additional_Author__c</externalDeveloperName>
    <label>Additional Author</label>
    <length>18</length>
    <type>Text</type>
</CustomField>