force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_Author_c__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_Author_c__c</fullName>
    <externalDeveloperName>udhayasow__Author__c</externalDeveloperName>
    <label>Author</label>
    <length>18</length>
    <type>Text</type>
</CustomField>