force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_Country_c__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_Country_c__c</fullName>
    <externalDeveloperName>udhayasow__Country__c</externalDeveloperName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Malaysia</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>