force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_Favourite_c__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_Favourite_c__c</fullName>
    <externalDeveloperName>udhayasow__Favourite__c</externalDeveloperName>
    <label>Favourite</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Cinema</fullName>
            </value>
            <value>
                <fullName>Nature Follower</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>