force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_Geo_location_Latitude_s__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_Geo_location_Latitude_s__c</fullName>
    <externalDeveloperName>udhayasow__Geo_location__Latitude__s</externalDeveloperName>
    <label>Geo_location (Latitude)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>