force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_Geo_location_Longitude_s__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_Geo_location_Longitude_s__c</fullName>
    <externalDeveloperName>udhayasow__Geo_location__Longitude__s</externalDeveloperName>
    <label>Geo_location (Longitude)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>