force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_Price_c__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_Price_c__c</fullName>
    <externalDeveloperName>udhayasow__Price__c</externalDeveloperName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>