force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_State_c__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_State_c__c</fullName>
    <externalDeveloperName>udhayasow__State__c</externalDeveloperName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tamilnadu</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>Selang</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>