force-app/main/default/objects/udhayasow_Book_c__x/fields/udhayasow_Theme_c__c.field-meta.xml
<CustomField>
    <fullName>udhayasow_Theme_c__c</fullName>
    <externalDeveloperName>udhayasow__Theme__c</externalDeveloperName>
    <label>Theme</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>